fixed dual sided cards not showing in search, reworked game filter, fixed search format symmetry, updated backend and frontend models, added protype flip functionality for dual sided cards, fixed game filter bug, refactored all components for simplicity

--- a/ClientApp/src/app/cardcomponent/cardcomponent.component.css
+++ b/ClientApp/src/app/cardcomponent/cardcomponent.component.css
@@ -1,6 +1,7 @@
 .card img{
     border-radius: 10px;
     max-width: 100%;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .card{
@@ -9,6 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     align-items: center;
     width: 100%;
     color: var(--primary-light);
@@ -46,5 +48,54 @@
 
 .cardcontainer{
     max-width: 20%;
-
 }
+
+
+
+
+
+/**************************************/
+.flip-card {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+  
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    transition: transform 0.5s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+    border-radius: 10px;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
+    border-radius: 10px;
+  }
